--- a/templates/conference/show.html.twig
+++ b/templates/conference/show.html.twig
@@ -36,28 +36,29 @@
     {% endif %}
 
     <h2>Add your own feedback</h2>
-    <form name="comment_form" method="post" enctype="multipart/form-data">
-        <div id="comment_form">
-            <div >
-                <label for="comment_form_author" class="required">Your name</label>
-                <input type="text" id="comment_form_author" name="comment_form[author]" required="required" maxlength="255" />
-            </div>
-            <div >
-                <label for="comment_form_text" class="required">Text</label>
-                <textarea id="comment_form_text" name="comment_form[text]" required="required"></textarea>
-            </div>
-            <div >
-                <label for="comment_form_email" class="required">Email</label>
-                <input type="email" id="comment_form_email" name="comment_form[email]" required="required" />
-            </div>
-            <div >
-                <label for="comment_form_photo">Photo</label>
-                <input type="file" id="comment_form_photo" name="comment_form[photo]" />
-            </div>
-            <div >
-                <button type="submit" id="comment_form_submit" name="comment_form[submit]">Submit</button>
-            </div>
-            <input type="hidden" id="comment_form__token" name="comment_form[_token]" value="DwqsEanxc48jofxsqbGBVLQBqlVJ_Tg4u9-BL1Hjgac" />
-        </div>
-    </form>
+    {{form(comment_form)}}
+{#    <form name="comment_form" method="post" enctype="multipart/form-data">#}
+{#        <div id="comment_form">#}
+{#            <div >#}
+{#                <label for="comment_form_author" class="required">Your name</label>#}
+{#                <input type="text" id="comment_form_author" name="comment_form[author]" required="required" maxlength="255" />#}
+{#            </div>#}
+{#            <div >#}
+{#                <label for="comment_form_text" class="required">Text</label>#}
+{#                <textarea id="comment_form_text" name="comment_form[text]" required="required"></textarea>#}
+{#            </div>#}
+{#            <div >#}
+{#                <label for="comment_form_email" class="required">Email</label>#}
+{#                <input type="email" id="comment_form_email" name="comment_form[email]" required="required" />#}
+{#            </div>#}
+{#            <div >#}
+{#                <label for="comment_form_photo">Photo</label>#}
+{#                <input type="file" id="comment_form_photo" name="comment_form[photo]" />#}
+{#            </div>#}
+{#            <div >#}
+{#                <button type="submit" id="comment_form_submit" name="comment_form[submit]">Submit</button>#}
+{#            </div>#}
+{#            <input type="hidden" id="comment_form__token" name="comment_form[_token]" value="DwqsEanxc48jofxsqbGBVLQBqlVJ_Tg4u9-BL1Hjgac" />#}
+{#        </div>#}
+{#    </form>#}
 {% endblock %}
